# Mediapipe-RAM-FACE-ANALYSIS

./: .gitignore  RAM_including_JERK_FACTOR.py  RAM_test.py  face_reading.py  facial graph.py  old RAM TEST.py  pyproject.toml
src/: face_reading.py  live_face_reading.py  new_face_reading.py  process_protocol1_scores.py
src/lib/: file_utils.py  globals.py  metadata.py  plot_styles.py
